
  aledr <matrixworkstation@gmail.com>
  - Fixed input formatting in vpopmaild
  - Fixed bounds issue in vdelivermail
  - Updated MySQL module to use "INSERT INTO .. ON DUPLICATE KEY UPDATE" instead of "REPLACE INTO"
  - Fixed overflow in PostgreSQL module
  - Updated MySQL queries to use uppercase characters for SQL syntax

  Johannes Weberhofer
  - Patches to fix some compiler warnings

5.4.28 - Released 10-Mar-2009
   Matt Brookings
   - Updated vlimits_read_vlimits_file to be much more efficient
   - Added vusage client API to libvpopmail
   - Added vusage daemon
   - Updated quota code to talk to vusage daemon if available
   - Fixed some backfill patch compilation issues
   - Updated maildir_to_email to support paths that end in /Maildir as well as /Maildir/
   - Added LDAP valias support
   - Updated vusage API to return counts for both users and domains
   - Updated domain quota enforcement to work when using vusage
   - Re-enabled --enable-domainquotas (with warnings)
   - Fixed percentage calculation bug in vmaildir_readquota
   - Updated lastauth/vlog queries not to trigger failure condition on domain
     deletion in MySQL and PostgreSQL module
   - Updated build scripts to show version 5.4.28
   - Added solution for 5.4.28 to LDAP schema for sn and cn attributes being
     required.  A permanent solution will be added to the 5.5 tree
   - Fixed vdelivermail to process .qmail files for users with dashes in their
     usernames when qmail-ext is enabled

   aledr <matrixworkstation@gmail.com>
   - Fixed overflow in PostgreSQL module

5.4.27 - Released 16-Jan-2009
	Jeremy Kister, Rick Widmer, Tom Collins
	- Solaris doesn't like setenv

	Michael Johnson, Steve Cole, dhaval, Rick Widmer
	- Another attempt at maildirquota

        Harmut Wernisch, Tom Collins
	- Fix mixed up usage of MYSQL_UPDATE_* and MYSQL_READ_* in vmysql.c:load_connection_info()
	This may need a tracker number attached.  I can't find it.

    Manvendra Bhangui